--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 
   "name": "alex-port",
   "version": "0.1.0",
-  "homepage": "'https://rodriguez531.github.io/react-port",
+  "homepage": "https://rodriguez531.github.io/react-port",
   "private": false,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
